# pytorch_abstraction_comparison

./: .gitignore  README.md  datasets.py  spoofcommit.sh
cpp/: .clang-format  CMakeLists.txt  build.sh  dcgan.cpp  dcgan.h  main.cpp  my_cudnn.h  readubyte.cpp  readubyte.h  resnet.h  resnet_cudnn.cu  run.sh  util.h
cpp/cudnn/: CMakeLists.txt  example.cu  helper.h  helper_cuda.h  layer.cu  layer.h  layers.h  loss.cu  loss.h  main.cu  mnist.cpp  mnist.h  network.cpp  network.h  readubyte.h  resnet.cu  resnet_cudnn.cu  tensor.h
cpp/cudnn/include/: activation.cuh  batch_norm_2d.cuh  conv_2d.cuh  cross_entropy_loss.h  dataset.h  dense.cuh  helper.h  layer.h  layers.cuh  loss.h  mnist.h  network.h  pooling.cuh  resnet.cuh  softmax.cuh  stl10.h  tensor.h
cpp/cudnn/include/datasets/: cifar10.h  dataset.h  datasets.h  mnist.h  pascal.h  stl10.h
cpp/cudnn/include/layers/: activation.cuh  addition.cuh  batch_norm_2d.cuh  conv_2d.cuh  dense.cuh  layer.h  layers.cuh  pooling.cuh  softmax.cuh
cpp/cudnn/src/: activation.cu  addition.cu  batch_norm_2d.cu  conv_2d.cu  cross_entropy_loss.cu  dataset.cpp  dense.cu  layer.cu  loss.cu  main.cu  mnist.cpp  network.cpp  pooling.cu  softmax.cu  stl10.cpp
cpp/cudnn/src/datasets/: cifar10.cpp  dataset.cpp  mnist.cpp  pascal.cpp  stl10.cpp
cpp/cudnn/src/layers/: activation.cu  addition.cu  batch_norm_2d.cu  conv_2d.cu  dense.cu  layer.cu  pooling.cu  softmax.cu
cpp/generic_utils/: CLI11.hpp  cuda_profiling.h  gputimer.h  helper.h  npy.h  stacktrace.h  stb_image.h
cpp/generic_utils/include/: cuda_helper.h  cuda_profiling.h  nvml.h  pascal_generic.h  prettyprint.h  progress_bar.h  tinyxml2.h  util.h
cpp/generic_utils/src/: pascal_generic.cpp  tinyxml2.cpp
cpp/lib_torch/: CMakeLists.txt  main.cpp
cpp/lib_torch/include/: cifar10.h  pascal.h  resnet.h  stl10.h  transform.h  util.h
cpp/lib_torch/src/: cifar10.cpp  main.cpp  main_torchscript.cpp  pascal.cpp  stl10.cpp  transform.cpp
lib_torch/: CMakeLists.txt  model_summary.txt
python/: all_plots.ipynb  cuda_profiling.py  datasets.py  graph.txt  main.py  main_torchscript.py  make_module_from_summary.py  pascal.py  plots.py  requirements  requirements.in  requirements.txt  resnet.py
python/tex/: scatter.tex
tex/: TODO  all_plots.tex  appendix.tex  background.tex  build.sh  discussion.tex  drawstack.sty  futurework.tex  introduction.tex  main.bib  main.tex  methods.tex  poster.tex  preamble.tex  results.tex  sample-sigconf.tex  scatter_tex  science.bst  speculation.tex
tex/code/: hello_world_kernel.c  softmax.c
tex/figures/: 3dplots.tex  accuracy_results.tex  cuda_code.tex  dispatch.tex  fermi.tex  other_accuracy_results.tex  resnet.tex  test_platforms.tex  timing_results.tex
tex/figures/plots/: all_plots_tex  batch_size_32_avg_gpu_util_for_resolutions.tex  batch_size_32_avg_sample_time_for_resolutions.tex  batch_size_32_avg_used_mem_for_resolutions.tex  cudnn_eval_avg_gpu_util.csv  cudnn_eval_avg_sample_time.csv  cudnn_eval_avg_used_mem.csv  cudnn_train_avg_gpu_util.csv  cudnn_train_avg_sample_time.csv  eval_accuracy_per_epoch_cifar10.tex  eval_accuracy_per_epoch_cifar10_teaser.tex  eval_accuracy_per_epoch_mnist.tex  eval_accuracy_per_epoch_pascal.tex  eval_accuracy_per_epoch_stl10.tex  eval_avg_gpu_util.tex  eval_avg_loss_per_epoch_cifar10.tex  eval_avg_loss_per_epoch_cifar10_teaser.tex  eval_avg_loss_per_epoch_mnist.tex  eval_avg_loss_per_epoch_pascal.tex  eval_avg_loss_per_epoch_stl10.tex  eval_avg_sample_time.tex  eval_avg_used_mem.tex  libtorch_eval_avg_gpu_util.csv  libtorch_eval_avg_sample_time.csv  libtorch_eval_avg_used_mem.csv  libtorch_train_avg_gpu_util.csv  libtorch_train_avg_sample_time.csv  libtorch_train_avg_used_mem.csv  pytorch_eval_avg_gpu_util.csv  pytorch_eval_avg_sample_time.csv  pytorch_eval_avg_used_mem.csv  pytorch_train_avg_gpu_util.csv  pytorch_train_avg_sample_time.csv  pytorch_train_avg_used_mem.csv  resolution_32_avg_gpu_util_for_batch_size.tex  resolution_32_avg_sample_time_for_batch_size.tex  resolution_32_avg_used_mem_for_batch_size.tex  scatter_tex  surf_tex  torchscript_eval_avg_gpu_util.csv  (+15 more)
tex/figures/stack_traces/: call_graph.tex  pytorch_stacktrace.txt  stacks.tex  torchscript_stacktrace.txt
tex/plots/: 3dplots.tex  eval_accuracy_per_epoch_cifar10_teaser.tex  eval_avg_loss_per_epoch_cifar10_teaser.tex  teaser.tex  train_accuracy_per_epoch_cifar10_teaser.tex  train_avg_loss_per_epoch_cifar10_teaser.tex
tex/stack_traces/: cudnn_stacktrace.txt  libtorch_stacktrace.txt  pytorch_stacktrace.txt  torchscript_stacktrace.txt
